src/objects/FieloPLT__Member__c.object
<CustomObject>
    <description>Members are the people or entities registered in your Program.</description>
    <fields>
        <fullName>FieloPLT__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Salesforce CRM Account name.</description>
        <inlineHelpText>Salesforce CRM Account name.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Agreement.</description>
        <inlineHelpText>Related Agreement.</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>FieloPLT__Agreement__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Salesforce CRM Contact.</description>
        <inlineHelpText>Related Salesforce CRM Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CurrentLevelMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It relates a Level to a Member.</description>
        <label>Level Member</label>
        <referenceTo>FieloPLT__LevelMember__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Email__c</fullName>
        <description>Member&apos;s email</description>
        <inlineHelpText>Enter Member&apos;s email.</inlineHelpText>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Image__c</fullName>
        <description>Member image.</description>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsBlocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, Member cannot log in through the Site.</description>
        <inlineHelpText>When ticked, Member cannot log in through the Site.</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsManager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member is a Manager of the Organization Account.</description>
        <inlineHelpText>Member is a Manager of their Organization Account.</inlineHelpText>
        <label>Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__LastTransactionDate__c</fullName>
        <description>Member&apos;s last transaction date.</description>
        <inlineHelpText>Member&apos;s last transaction date.</inlineHelpText>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Level__c</fullName>
        <description>Member Level.</description>
        <formula>HYPERLINK(&apos;/&apos; + FieloPLT__CurrentLevelMember__r.FieloPLT__Level__c, FieloPLT__CurrentLevelMember__r.FieloPLT__Level__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MemberId__c</fullName>
        <description>ID that identifies a Member unequivocally.</description>
        <label>Member Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__OrganizationAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organization account linked to the Organization Contributor account.</description>
        <inlineHelpText>Choose Organization account where the Organization Contributor Member belongs to.</inlineHelpText>
        <label>Organization Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Member must be an &quot;Organization Account&quot; and belong to the same Program.</errorMessage>
            <filterItems>
                <field>FieloPLT__Member__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Organization Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Members (Organization Account)</relationshipLabel>
        <relationshipName>FieloAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Member&apos;s points.</description>
        <inlineHelpText>Member&apos;s points.</inlineHelpText>
        <label>Points</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program where the Member belongs to.</description>
        <inlineHelpText>Program the Member belongs to.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <description>Member&apos;s status.</description>
        <inlineHelpText>Member&apos;s status.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member&apos;s User.</description>
        <inlineHelpText>Enter the Member&apos;s User.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiteURL__c</fullName>
        <description>Link that allows Members to finish their registration process.</description>
        <formula>FieloPLT__Program__r.SiteURL__c +  &apos;FieloCMS__Page?memberId=&apos; + Id + &apos;&amp;pageId=&apos; +  FieloPLT__Program__r.RegisterStep2Page__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link that allows Members to finish their registration process.</inlineHelpText>
        <label>Site URL</label>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__User__c</columns>
        <columns>FieloPLT__LastTransactionDate__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__Organization_Account</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FieloPLT__Member__c.FieloPLT__OrganizationAccount</value>
        </filters>
        <label>Organization Account</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <recordTypes>
        <fullName>FieloPLT__IndividualAccount</fullName>
        <active>true</active>
        <description>A one-person Fielo account.</description>
        <label>Individual Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__OrganizationAccount</fullName>
        <active>true</active>
        <description>Fielo Account for entities.</description>
        <label>Organization Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__OrganizationContributor</fullName>
        <active>true</active>
        <description>Fielo account for an individual person who contributes to an Organization account.</description>
        <label>Organization Contributor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ContactMatchingField</fullName>
        <active>true</active>
        <description>This validation rule is useful when the non duplication contact process is triggered, to avoid duplicate contact due to an empty common unique field (email).</description>
        <errorConditionFormula>ISBLANK(FieloPLT__Email__c) &amp;&amp; (RecordType.DeveloperName = &apos;OrganizationContributor&apos; || RecordType.DeveloperName = &apos;IndividualAccount&apos;)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Email__c</errorDisplayField>
        <errorMessage>Email is required to avoid Contact duplication.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__ModifyProgram</fullName>
        <active>true</active>
        <description>The related Program cannot be modified.</description>
        <errorConditionFormula>ISCHANGED(FieloPLT__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloPLT__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloPLT__Program__c</errorDisplayField>
        <errorMessage>The related Program cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__NegativePoints</fullName>
        <active>true</active>
        <description>Member cannot have negative points.</description>
        <errorConditionFormula>FieloPLT__Points__c &lt; 0</errorConditionFormula>
        <errorMessage>Member cannot have negative points.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__OrganizationAccountCanNotBeManager</fullName>
        <active>true</active>
        <description>An Organization Account cannot be set as Manager.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;OrganizationAccount&apos; &amp;&amp; FieloPLT__IsManager__c</errorConditionFormula>
        <errorDisplayField>FieloPLT__IsManager__c</errorDisplayField>
        <errorMessage>An Organization Account cannot be set as Manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__OrganizationAccountRelation</fullName>
        <active>true</active>
        <description>An Organization Account cannot  be related to another Organization Account.</description>
        <errorConditionFormula>IF( AND(RecordType.DeveloperName == &apos;OrganizationAccount&apos;, NOT(ISBLANK(FieloPLT__OrganizationAccount__c)) ),
true,
false)</errorConditionFormula>
        <errorDisplayField>FieloPLT__OrganizationAccount__c</errorDisplayField>
        <errorMessage>An Organization Account cannot  be related to another Organization Account.</errorMessage>
    </validationRules>
</CustomObject>